added all training programs page + sorting + filtering

--- a/OnlineCoachingApp.Services.Data/OnlineCoachingApp.Services.Data.csproj
+++ b/OnlineCoachingApp.Services.Data/OnlineCoachingApp.Services.Data.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\OnlineCoachingApp.Common\OnlineCoachingApp.Common.csproj" />
     <ProjectReference Include="..\OnlineCoachingApp.Data.Models\OnlineCoachingApp.Data.Models.csproj" />
     <ProjectReference Include="..\OnlineCoachingApp.Data\OnlineCoachingApp.Data.csproj" />
+    <ProjectReference Include="..\OnlineCoachingApp.Services.Data.Models\OnlineCoachingApp.Services.Data.Models.csproj" />
     <ProjectReference Include="..\OnlineCoachingApp.Web.ViewModels\OnlineCoachingApp.Web.ViewModels.csproj" />
   </ItemGroup>
 
