--- a/OnlineCoachingApp.Web/OnlineCoachingApp.Web.csproj
+++ b/OnlineCoachingApp.Web/OnlineCoachingApp.Web.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\OnlineCoachingApp.Common\OnlineCoachingApp.Common.csproj" />
     <ProjectReference Include="..\OnlineCoachingApp.Data.Models\OnlineCoachingApp.Data.Models.csproj" />
     <ProjectReference Include="..\OnlineCoachingApp.Data\OnlineCoachingApp.Data.csproj" />
+    <ProjectReference Include="..\OnlineCoachingApp.Services.Data.Models\OnlineCoachingApp.Services.Data.Models.csproj" />
     <ProjectReference Include="..\OnlineCoachingApp.Services.Data\OnlineCoachingApp.Services.Data.csproj" />
     <ProjectReference Include="..\OnlineCoachingApp.Web.Infrastructure\OnlineCoachingApp.Web.Infrastructure.csproj" />
     <ProjectReference Include="..\OnlineCoachingApp.Web.ViewModels\OnlineCoachingApp.Web.ViewModels.csproj" />
